# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  corners_pdb_generator.py  edges_pdb_generator.py  rubiks_cube.py  rubiks_cube_information.py  rubiks_cube_pattern_key.py  supermain.py
heuristics-generator/: corners_pdb_generator.py  edges_pdb_generator.py  requirements.txt  rubiks_cube.py  rubiks_cube_pattern_key.py  supermain.py
heuristics-generator/precompute/: corner-face-product-to-type.json  edge-face-product-to-type.json  opposite-moves.json
precompute/: corner-orientations-for-corner-type-and-position.json  corner-positions-to-indices.json  edge-face-product-to-type.json  edge-orientations-for-edge-type-and-position.json
solver/: CMakeLists.txt  map-loader.cpp  map-loader.h  rubiks-cube-information.cpp  rubiks-cube-information.h  rubiks-cube-pattern-key.cpp  rubiks-cube-pattern-key.h  rubiks-cube-solver.cpp  rubiks-cube-solver.h  rubiks-cube.cpp  rubiks-cube.h  solver.cpp
solver/precompute/: edge-orientations-for-edge-type-and-position.json  edge-positions-to-indices.json  opposite-moves.json
